# dekapu-auto-rmshbi

./: README.md  main.py  pyproject.toml
app/: clickpoint_extractor.py  image_capture.py  input_controller.py  mask_loader.py  motion_detector.py  point.py  window_controroller.py
